# rdga1bot

./: .gitignore  CALIBRATION.md  CHECKLIST.md  CLAUDE.md  CLAUDE_ARCH.md  CLAUDE_CONSTITUTION.md  CLAUDE_HISTORY.md  CLAUDE_OFFSETS.md  CMakeLists.txt  CMakePresets.json  README.md  build.sh  farm.sh  launch.sh  launch_qa.sh  new_chat_context_after_MR51.md  offsets.json  rdga1bot.example.ini  rdga1bot.ini
.claude-plugin/: mempalace.json
.github/workflows/: ci.yml
qa/: alert_manager.py  anomaly_engine.py  dashboard_gen.py  frame_capture.py  mempalace_bridge.py  qa_monitor.py  requirements.txt  screen_capture.py  video_record.py
qa/parsers/: __init__.py  live_stats.py  log_tailer.py  stats_reader.py
scripts/: mempalace-mine.sh  mempalace-setup.sh  mp-snapshot.sh  navmesh_3d.py  navmesh_preview.py  qa-start.sh
src/: AllocStats.cpp  AllocStats.h  BehaviorTree.cpp  BehaviorTree.h  Blackboard.cpp  Blackboard.h  BotBT_Attack.cpp  BotBT_Buff.cpp  BotBT_Dead.cpp  BotBT_Nav.cpp  BotBT_RL.cpp  BotBT_Target.cpp  BotBehaviorTree.cpp  BotBehaviorTree.h  BotMood.h  Brain.cpp  Brain.h  Capture.cpp  Capture.h  Capture_Linux.cpp  Config.cpp  Config.h  Dashboard.cpp  Dashboard.h  DirectorSystem.cpp  DirectorSystem.h  ExperienceBuffer.h  Eyes.cpp  Eyes.h  FPS.h  FeatureExtractor.h  Geodata.cpp  Geodata.h  Hands.h  Input.cpp  Input.h  Intercept.cpp  Intercept.h  Intercept_Linux.cpp  LearningWorker.cpp  (+47 more)
src/tools/: diag.h  diag_calibrate.cpp  diag_dump.cpp  diag_findpos.cpp  diag_helpers.cpp  diag_map.cpp
tests/: Makefile  bt_test.cpp  memory_test.cpp  test_blackboard.cpp  test_director.cpp
tools/: bsp_to_navmesh.cpp  build_navmesh.cpp
